@@ -3,6 +3,7 @@
     * src/mos6502/gen.c:
       Improve genPlus, genMinus and genlsh16.
       Several cosmetic changes to match sdcc coding style.
+      Rewrite genlsh32.
 
 2025-02-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
